--- a/www-ejercicios/ejercicios/mecanografia/css/style.css
+++ b/www-ejercicios/ejercicios/mecanografia/css/style.css
@@ -150,7 +150,7 @@ body {
   margin: 0 auto;
   width: 100%;
   max-height: 85vh;
-  overflow-y: auto;
+  overflow: hidden;
   animation: fadeIn 0.8s ease-out;
   display: flex;
   flex-direction: column;
